--- a/src/classes/_hu-padding.scss
+++ b/src/classes/_hu-padding.scss
@@ -5,7 +5,7 @@
 
       @include hu-generic($class-name, $module) {
         @each $property in $properties {
-          #{$property}: $value;
+          #{$property}: $value #{hu-important()};
         }
       }
     }
@@ -21,7 +21,7 @@
 
           @include hu-responsive($class-name, $hu-padding-modules, $bp-scale) {
             @each $property in $properties {
-              #{$property}: $value;
+              #{$property}: $value #{hu-important()};
             }
           }
         }
