--- a/src/mixins/_hu-generic-classes.scss
+++ b/src/mixins/_hu-generic-classes.scss
@@ -10,7 +10,7 @@
         $value: if($value, $value, $type);
 
         @include hu-generic($class-name, $module) {
-          #{$property}: $value;
+          #{$property}: $value #{hu-important()};
         }
       }
     }
