--- a/src/classes/_hu-svg-fill-color.scss
+++ b/src/classes/_hu-svg-fill-color.scss
@@ -6,7 +6,7 @@
       $property: fill;
 
       @include hu-generic($class-name, $module) {
-        #{$property}: $value;
+        #{$property}: $value #{hu-important()};
       }
     }
   }
@@ -21,7 +21,7 @@
           $property: fill;
 
           @include hu-responsive($class-name, $hu-svg-fill-color-modules, $bp-scale) {
-            #{$property}: $value;
+            #{$property}: $value #{hu-important()};
           }
         }
       }
