--- a/src/classes/_hu-theme-bg-color.scss
+++ b/src/classes/_hu-theme-bg-color.scss
@@ -6,7 +6,7 @@
       $property: background-color;
 
       @include hu-theme($class-name, $theme, $module) {
-        #{$property}: $value;
+        #{$property}: $value #{hu-important()};
       }
     }
   }
@@ -21,7 +21,7 @@
           $property: background-color;
 
           @include hu-theme-responsive($class-name, $theme, $hu-theme-bg-color-modules, $bp-scale) {
-            #{$property}: $value;
+            #{$property}: $value #{hu-important()};
           }
         }
       }
