--- a/src/reset/_index.scss
+++ b/src/reset/_index.scss
@@ -3,7 +3,7 @@
     *,
     *::before,
     *::after {
-      box-sizing: $hu-reset-box-sizing;
+      box-sizing: $hu-reset-box-sizing #{hu-important()};
     }
   }
 
@@ -89,9 +89,9 @@
   ul,
   var,
   video {
-    border: none;
-    margin: 0;
-    padding: 0;
+    border: none #{hu-important()};
+    margin: 0 #{hu-important()};
+    padding: 0 #{hu-important()};
   }
 
   article,
@@ -107,48 +107,48 @@
   nav,
   section,
   summary {
-    display: block;
+    display: block #{hu-important()};
   }
 
   audio,
   canvas,
   video {
-    display: inline-block;
+    display: inline-block #{hu-important()};
   }
 
   audio:not([controls]) {
-    display: none;
-    height: 0;
+    display: none #{hu-important()};
+    height: 0 #{hu-important()};
   }
 
   [hidden],
   template {
-    display: none;
+    display: none #{hu-important()};
   }
 
   a {
-    display: inline-block;
-    text-decoration: none;
+    display: inline-block #{hu-important()};
+    text-decoration: none #{hu-important()};
   }
 
   b,
   strong {
-    font-weight: bolder;
+    font-weight: bolder #{hu-important()};
   }
 
   button {
     @if ($hu-reset-box-sizing != border-box) {
-      box-sizing: $hu-reset-box-sizing;
+      box-sizing: $hu-reset-box-sizing #{hu-important()};
     }
-    background: none;
-    border: none;
-    cursor: pointer;
-    display: inline-block;
-    line-height: 1;
+    background: none #{hu-important()};
+    border: none #{hu-important()};
+    cursor: pointer #{hu-important()};
+    display: inline-block #{hu-important()};
+    line-height: 1 #{hu-important()};
 
     &::-moz-focus-inner {
-      border: none;
-      padding: 0;
+      border: none #{hu-important()};
+      padding: 0 #{hu-important()};
     }
   }
 
@@ -157,62 +157,62 @@
   optgroup,
   select,
   textarea {
-    color: inherit;
-    font-family: inherit;
-    font-size: 1em;
+    color: inherit #{hu-important()};
+    font-family: inherit #{hu-important()};
+    font-size: 1em #{hu-important()};
   }
 
   [disabled],
   :disabled {
-    cursor: default;
-    pointer-events: none;
+    cursor: default #{hu-important()};
+    pointer-events: none #{hu-important()};
   }
 
   html {
-    background-color: $hu-reset-html-background-color;
-    color: $hu-reset-html-color;
-    font-family: $hu-reset-html-font-family;
+    background-color: $hu-reset-html-background-color #{hu-important()};
+    color: $hu-reset-html-color #{hu-important()};
+    font-family: $hu-reset-html-font-family #{hu-important()};
 
     @if ($hu-reset-html-font-size != 16px) {
-      font-size: $hu-reset-html-font-size;
+      font-size: $hu-reset-html-font-size #{hu-important()};
     }
 
     @if ($hu-reset-html-font-smoothing) {
-      -moz-osx-font-smoothing: grayscale;
-      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale #{hu-important()};
+      -webkit-font-smoothing: antialiased #{hu-important()};
     }
 
-    overflow-y: $hu-reset-html-overflow-y;
-    -ms-overflow-style: scrollbar;
-    text-size-adjust: 100%;
+    overflow-y: $hu-reset-html-overflow-y #{hu-important()};
+    -ms-overflow-style: scrollbar #{hu-important()};
+    text-size-adjust: 100% #{hu-important()};
   }
 
   img {
-    vertical-align: bottom;
+    vertical-align: bottom #{hu-important()};
 
     @if ($hu-reset-img-responsive) {
-      height: auto;
-      max-width: 100%;
+      height: auto #{hu-important()};
+      max-width: 100% #{hu-important()};
     }
   }
 
   input {
-    margin: 0;
+    margin: 0 #{hu-important()};
   }
 
   ol,
   ul {
-    list-style: none;
+    list-style: none #{hu-important()};
   }
 
   table {
-    border-collapse: collapse;
+    border-collapse: collapse #{hu-important()};
   }
 
   td,
   th {
     @if ($hu-reset-box-sizing == border-box) {
-      box-sizing: content-box;
+      box-sizing: content-box #{hu-important()};
     }
   }
 
@@ -222,28 +222,28 @@
   [type="text"],
   [type="url"],
   textarea {
-    appearance: $hu-reset-text-input-appearance;
+    appearance: $hu-reset-text-input-appearance #{hu-important()};
   }
 
   @if ($hu-reset-remove-number-input-spinners) {
     [type="number"] {
-      appearance: $hu-reset-text-input-appearance;
+      appearance: $hu-reset-text-input-appearance #{hu-important()};
 
       &::-webkit-outer-spin-button,
       &::-webkit-inner-spin-button {
-        -webkit-appearance: none;
-        margin: 0;
+        -webkit-appearance: none #{hu-important()};
+        margin: 0 #{hu-important()};
       }
     }
   }
 
   ::placeholder {
-    color: $hu-reset-input-placeholder-color;
-    opacity: 1;
+    color: $hu-reset-input-placeholder-color #{hu-important()};
+    opacity: 1 #{hu-important()};
   }
 
   ::-webkit-search-decoration {
-    -webkit-appearance: none;
-    margin: 0;
+    -webkit-appearance: none #{hu-important()};
+    margin: 0 #{hu-important()};
   }
 }
