reduce svg color modules used to base and group-hover

--- a/src/variables/classes/_hu-svg-fill-color.scss
+++ b/src/variables/classes/_hu-svg-fill-color.scss
@@ -1,3 +1,3 @@
-$hu-svg-fill-color-modules: $hu-bg-color-modules !default;
+$hu-svg-fill-color-modules: (base, group-hover) !default;
 
 $hu-svg-fill-color-types: map-merge((current: (current: currentColor)), $hu-colors) !default;
