Add  in reset. Defaults to .

--- a/src/reset/_index.scss
+++ b/src/reset/_index.scss
@@ -129,6 +129,9 @@
   a {
     display: inline-block #{hu-important()};
     text-decoration: none #{hu-important()};
+    @if ($hu-reset-text-decoration-skip-ink != auto) {
+      text-decoration-skip-ink: $hu-reset-text-decoration-skip-ink #{hu-important()};
+    }
   }
 
   b,
