Set opacity modules to: base, focus, hover, hocus, group-hover, group-state, state

--- a/src/variables/classes/_hu-opacity.scss
+++ b/src/variables/classes/_hu-opacity.scss
@@ -1,4 +1,4 @@
-$hu-opacity-modules: (base) !default;
+$hu-opacity-modules: (base, focus, hover, hocus, group-hover, group-state, state) !default;
 
 $hu-opacity-types: (
   0: 0,
