--- a/src/classes/_hu-margin.scss
+++ b/src/classes/_hu-margin.scss
@@ -4,98 +4,16 @@
       $class-name: hu-class-name(#{$type}-#{$scale});
       $class-name-negative: hu-class-name(#{$type}-n#{$scale});
 
-      @if ($module == base) {
-        @include hu-base($class-name) {
-          @each $property in $properties {
-            #{$property}: $value #{hu-important()};
-          }
-        }
-
-        @if (type-of($value) == number) {
-          @include hu-base($class-name-negative) {
-            @each $property in $properties {
-              #{$property}: $value * -1;
-            }
-          }
+      @include hu-generic($class-name, $module) {
+        @each $property in $properties {
+          #{$property}: $value #{hu-important()};
         }
       }
 
-      @else if ($module == focus or $module == hocus or $module == hover) {
-        @include hu-hocus($class-name, $module) {
+      @if (type-of($value) == number) {
+        @include hu-generic($class-name-negative, $module) {
           @each $property in $properties {
-            #{$property}: $value #{hu-important()};
-          }
-        }
-
-        @if (type-of($value) == number) {
-          @include hu-hocus($class-name-negative) {
-            @each $property in $properties {
-              #{$property}: $value * -1;
-            }
-          }
-        }
-      }
-
-      @else if ($module == state) {
-        @include hu-state($class-name) {
-          @each $property in $properties {
-            #{$property}: $value #{hu-important()};
-          }
-        }
-
-        @if (type-of($value) == number) {
-          @include hu-state($class-name-negative) {
-            @each $property in $properties {
-              #{$property}: $value * -1;
-            }
-          }
-        }
-      }
-
-      @else if ($module == group-hover) {
-        @include hu-group-hover($class-name) {
-          @each $property in $properties {
-            #{$property}: $value #{hu-important()};
-          }
-        }
-
-        @if (type-of($value) == number) {
-          @include hu-group-hover($class-name-negative) {
-            @each $property in $properties {
-              #{$property}: $value * -1;
-            }
-          }
-        }
-      }
-
-      @else if ($module == group-state) {
-        @include hu-group-state($class-name) {
-          @each $property in $properties {
-            #{$property}: $value #{hu-important()};
-          }
-        }
-
-        @if (type-of($value) == number) {
-          @include hu-group-state($class-name-negative) {
-            @each $property in $properties {
-              #{$property}: $value * -1;
-            }
-          }
-        }
-      }
-
-      @else if ($module == print) {
-        @include hu-print($class-name) {
-          @each $property in $properties {
-            #{$property}: $value #{hu-important()};
-          }
-        }
-
-        @if (type-of($value) == number) {
-          @include hu-print($class-name-negative) {
-            @each $property in $properties {
-              #{$property}: $value * -1;
-            }
+            #{$property}: $value * -1;
           }
         }
       }
@@ -111,48 +29,16 @@
           $class-name: hu-class-name(#{$type}-#{$scale});
           $class-name-negative: hu-class-name(#{$type}-n#{$scale});
 
-          @include hu-responsive-base($class-name, $bp-scale) {
+          @include hu-responsive($class-name, $hu-margin-modules, $bp-scale) {
             @each $property in $properties {
               #{$property}: $value #{hu-important()};
             }
           }
 
           @if (type-of($value) == number) {
-            @include hu-responsive-base($class-name-negative, $bp-scale) {
+            @include hu-responsive($class-name-negative, $hu-margin-modules, $bp-scale) {
               @each $property in $properties {
                 #{$property}: $value * -1;
-              }
-            }
-          }
-
-          @if (index($hu-margin-modules, state)) {
-            @include hu-responsive-state($class-name, $bp-scale) {
-              @each $property in $properties {
-                #{$property}: $value #{hu-important()};
-              }
-            }
-
-            @if (type-of($value) == number) {
-              @include hu-responsive-state($class-name-negative, $bp-scale) {
-                @each $property in $properties {
-                  #{$property}: $value * -1;
-                }
-              }
-            }
-          }
-
-          @if (index($hu-margin-modules, group-state)) {
-            @include hu-responsive-group-state($class-name, $bp-scale) {
-              @each $property in $properties {
-                #{$property}: $value #{hu-important()};
-              }
-            }
-
-            @if (type-of($value) == number) {
-              @include hu-responsive-group-state($class-name-negative, $bp-scale) {
-                @each $property in $properties {
-                  #{$property}: $value * -1;
-                }
               }
             }
           }
